HOP-3412: update jacoco, surefire and add argline for java 11