@@ -138,7 +138,7 @@
         <!-- Copy from master POM (NEEDS CLEANUP) -->
         <!-- VERSIONS -->
         <batik.version>1.12</batik.version>
-        <jacoco-maven-plugin.version>0.8.1</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
         <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
         <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
@@ -155,8 +155,8 @@
         <maven-project-info-reports-plugin.version>2.9</maven-project-info-reports-plugin.version>
         <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
-        <maven-surefire-report-plugin.version>3.0.0-M4</maven-surefire-report-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+        <maven-surefire-report-plugin.version>3.0.0-M5</maven-surefire-report-plugin.version>
         <maven-verifier-plugin.version>1.1</maven-verifier-plugin.version>
         <sonar-maven-plugin.version>3.5.0.1254</sonar-maven-plugin.version>
         <maven-bundle-plugin.version>2.5.3</maven-bundle-plugin.version>
@@ -691,7 +691,7 @@
                             <goal>test</goal>
                         </goals>
                         <configuration>
-                            <argLine>@{argLine} -Dfile.encoding=${project.build.sourceEncoding}
+                            <argLine>@{argLine} --illegal-access=permit -Dfile.encoding=${project.build.sourceEncoding}
                                 ${maven-surefire-plugin.argLine}
                             </argLine> <!-- this is set by jacoco's prepare-agent execution -->
                             <forkCount>${maven-surefire-plugin.forkCount}</forkCount>
